--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,1 +1,40 @@
-<p>details works!</p>
+<div class="details">
+    <div class="game-banner">
+        <img
+            class = "game-banner-image"
+            src = "{{ game.background_image }}"
+            alt = "backround image"
+        />
+    </div>
+    <div class="game-content">
+        <div class="details-wrapper">
+            <div class="game-header">
+                <h1 class="game-header-title">Game Name</h1>
+                <h2 class="game-header-release-date">Release: {{ game.released | date }}
+                </h2>
+                <p class="game-header-genres">
+                    <span *ngFor="let genre of game.genres; let last = last">
+                    {{ genre.name }}<span *ngIf="!last">, </span></span>
+                </p>
+                <div class="game-guage">
+                    <mwl-gauge
+                        class="two"
+                        [max]="100"
+                        [dialStartAngle]="180"
+                        [dialEndAngle]="0"
+                        [value]="gameRating"
+                        [animated]="true"
+                        [color]="getColor"
+                        [animationDuration]="2"
+                    >
+                    </mwl-gauge>
+                    <a 
+                        class="game-guage-label"
+                        target="_blank"
+                        href="{{ game.metacritic_url }}"
+                    >Metacritic</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
